--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,101 @@
 
 @import 'tailwindcss';
 
+@theme {
+  --color-*: initial;
+  --color-white: #ffffff;
+  --color-black: #000000;
+  --color-blue-25: #f5f9ff;
+  --color-blue-50: #e9f1ff;
+  --color-blue-100: #d3e4ff;
+  --color-blue-200: #a7c9ff;
+  --color-blue-300: #7aadff;
+  --color-blue-400: #4e92ff;
+  --color-blue-500: #2277ff;
+  --color-blue-600: #1b5fcc;
+  --color-blue-700: #144799;
+  --color-blue-800: #0e3066;
+  --color-blue-900: #071833;
+  --color-cobalt-25: #f5f9ff;
+  --color-cobalt-50: #e9e7ff;
+  --color-cobalt-100: #d3f0ff;
+  --color-cobalt-200: #a7e2ff;
+  --color-cobalt-300: #7ad3ff;
+  --color-cobalt-400: #4ecaff;
+  --color-cobalt-500: #00b2ff;
+  --color-cobalt-600: #008ecc;
+  --color-cobalt-700: #0079ad;
+  --color-cobalt-800: #005174;
+  --color-cobalt-900: #00273a;
+  --color-green-25: #f7fdfa;
+  --color-green-50: #f6f9f1;
+  --color-green-100: #cdf2e3;
+  --color-green-200: #9be6c7;
+  --color-green-300: #69d9aa;
+  --color-green-400: #37cd8e;
+  --color-green-500: #05c072;
+  --color-green-600: #049a5b;
+  --color-green-700: #037344;
+  --color-green-800: #024d2e;
+  --color-green-900: #012617;
+  --color-yellow-25: #fffcf5;
+  --color-yellow-50: #fffaed;
+  --color-yellow-100: #fff5db;
+  --color-yellow-200: #ffebb7;
+  --color-yellow-300: #ffe193;
+  --color-yellow-400: #ffd76f;
+  --color-yellow-500: #ffcd4b;
+  --color-yellow-600: #cca43c;
+  --color-yellow-700: #997b2d;
+  --color-yellow-800: #66521e;
+  --color-yellow-900: #33290f;
+  --color-red-25: #fef6f6;
+  --color-red-50: #fdeeed;
+  --color-red-100: #fcdddc;
+  --color-red-200: #f9bab9;
+  --color-red-300: #f59896;
+  --color-red-400: #f27573;
+  --color-red-500: #ef5350;
+  --color-red-600: #bf4240;
+  --color-red-700: #8f3230;
+  --color-red-800: #602120;
+  --color-red-900: #301110;
+  --color-purple-25: #faf6fe;
+  --color-purple-50: #f6edfd;
+  --color-purple-100: #eedcfc;
+  --color-purple-200: #ddb9f9;
+  --color-purple-300: #cb96f5;
+  --color-purple-400: #ba73f2;
+  --color-purple-500: #a950ef;
+  --color-purple-600: #8740bf;
+  --color-purple-700: #65308f;
+  --color-purple-800: #442060;
+  --color-purple-900: #221030;
+  --color-gray-25: #fafafa;
+  --color-gray-50: #f2f2f2;
+  --color-gray-100: #e5e5e5;
+  --color-gray-200: #cccccc;
+  --color-gray-300: #b2b2b2;
+  --color-gray-400: #999999;
+  --color-gray-500: #808080;
+  --color-gray-600: #666666;
+  --color-gray-700: #4d4d4d;
+  --color-gray-800: #333333;
+  --color-gray-900: #1a1a1a;
+  --color-slate-10: #f9fafb;
+  --color-slate-30: #f4f6fb;
+  --color-slate-50: #f0f3f9;
+  --color-slate-100: #e9eff6;
+  --color-slate-200: #d7dfe9;
+  --color-slate-300: #afbaca;
+  --color-slate-400: #8897ae;
+  --color-slate-500: #5e718d;
+  --color-slate-600: #455468;
+  --color-slate-700: #3d4a5c;
+  --color-slate-800: #2d3643;
+  --color-slate-900: #1c222b;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
